@@ -268,6 +268,9 @@ Specify an endline delimiter string for breaking lines read via \-/\-\-read\-fro
 .TP
 .B \-r {resolution}, \-\-resolution {resolution}
 		 set resolution (UNFINISHED)
+.TP
+.B \-R, \-\-recursive
+		 Push files/directories to the files list recursively.
 
 .SH PROGRAM RETURN STATUS
 The program return status is 0 on correct operation; 252 on unsupported device specification; 248 on bad input; 255 on a generic error; 42 on a signal\-triggered program exit;  or a different value in case of an another error.
